[package]
name = "antelope_trx"
version = "0.1.0"
authors = ["Yaro <yaro@pinax.network"]
description = "Antelope transactions substream."
license = "MIT"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-antelope = "0.6.0"
substreams-database-change = "1.3.1"
