[package]
name = "antelope_transfers"
version = "0.1.0"
authors = ["Yaro <yaro@pinax.network"]
description = "Antelope transfers"
license = "MIT"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-antelope = "0.6"
substreams-database-change = "1.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
antelope = "0.2.0"

[build-dependencies]
substreams-antelope = "0.6"
